--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,15 +7,8 @@
   </p>
   <%= link_to "Log-Out", log_out_path, method: :delete %>
 <% else%>
-  <%= link_to "Log-In", log_in_path %>
-  <%= link_to "Sign-Up", users_new_path %>
+  <div class="login-signup">
+    <%= link_to "Log-In", log_in_path, class: "button" %>
+    <%= link_to "Sign-Up", users_new_path, class: "button" %>
+  </div>
 <% end %>
-
-
-<ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= user.email %>
-    </li>
-  <% end %>
-</ul>
