--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,10 @@
 
 <% if current_user %>
   <p>
-    <%= current_user.email %> ... is great
+    <%= current_user.email %>
   </p>
   <%= link_to "Log-Out", log_out_path, method: :delete %>
-<% else%>
+<% else %>
   <div class="login-signup">
     <%= link_to "Log-In", log_in_path, class: "button" %>
     <%= link_to "Sign-Up", users_new_path, class: "button" %>
