this afternoon's changes

--- a/app/views/shows/results.html.erb
+++ b/app/views/shows/results.html.erb
@@ -1,4 +1,4 @@
-<h1>Shows matching genre '<%= @genre %>', '<%= @mood %>', '<%= @setting %>'</h1>
+<h1>Shows matching genre '<%= @genre %>'</h1>
 <% @results.each do |show| %>
 	<ul>
 		<li>
