--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,6 @@
 <% else %>
   <div class="login-signup">
     <%= link_to "Log-In", log_in_path, class: "button" %>
-    <%= link_to "Sign-Up", users_new_path, class: "button" %>
+    <%= link_to "Sign-Up", new_user_path, class: "button" %>
   </div>
 <% end %>
