--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-
+<h1> Sign Up<h1>
+<h2>Decider: This app does one thing moderately well.</h2>
 <%= form_for @user do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
