--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,32 +1,3 @@
-body {
-	/*background-color: purple;*/
-	font-family: 'Lato', sans-serif;"
-	margin: 0;
-}
-
-#index {
-	text-align: center;
-}
-
-.page-header {
-	background-color: chartreuse;
-	font-size: 1.25em;
-	padding: 20px 2rem;
-}
-
-. {
-	padding: 25px 2rem;
-}
-
-.search-page input {
-	font-size: 1.5rem;
-	border: 2px solid red;
-}
-
-.results-page input[type=submit] {
-	background-color: ;
-}
-
-.favorites-page {
-	color: aliceblue;
-}
+ <div class="three columns">
+    <h1>Full Width Column</h1>
+  </div>
