--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,15 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body
 
-<%= link_to "Home", root_path %>    <%= link_to "Home", root_path %>
+<%= link_to "Home", root_path %>    
+<%= link_to "Search",  search_path %>
+<%= link_to "About", root_path %>
 
 <%= yield %>
+
+
 
 </body>
 </html>
