--- a/app/views/shows/results.html.erb
+++ b/app/views/shows/results.html.erb
@@ -3,23 +3,24 @@
 	<ul>
 		<li>
 			<strong>Title:</strong>
-			<%= show["program"]["title"] %>
+			<%= show.title %>
 		</li>
 		<li>
 			<strong>Description:</strong>
-			<%= show["program"]["short_description"] %>
+			<%= show.description %>
 		</li>
 		<li>
 			<strong>Start Time:</strong>
-			<%= Time.parse(show["start_time"]).strftime("%a %D %I:%M %p") %>
+			<%= show.airtime.strftime("%a %D %I:%M %p") %>
 		</li>
 		<li>
 			<strong>Duration:</strong>
-			<%= show["duration"] %> minutes
+			<%= show.duration %> minutes
 		</li>
 		<li>
 			<strong>Station:</strong>
-			<%= show["station"]["call_sign"] %>
+			<%= show.network %>
 		</li>
 	</ul>
+	<%= button_to 'Add to Favorites', user_shows_path(current_user), :params => {:show => ActiveSupport::JSON.encode(show)}, :method => :post  %>
 <% end %>
