--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,20 @@
 <html>
 <head>
   <title>DeciderApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href="http://fonts.googleapis.com/css?family=Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
 </head>
 <body
-
+<div class="container">
 <%= link_to "Home", root_path %>    
 <%= link_to "Search",  search_path %>
 <%= link_to "About", root_path %>
 
-<%= yield %>
 
+<%= yield %>
+</div>
 
 
 </body>
