--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,2 +1,30 @@
+html {
+
+}
+
+.welcome-heading {
+	font-size: 5em;
+	margin: 1.33em auto .5em 0;
+	text-align: center;
+}
+
+.tagline {
+	margin-bottom: 1.25em;
+	text-align: center;
+}
+
+.welcome-body {
+	text-align: center;
+}
+
 .login-signup {
+	background-color: lightblue;
+	border-radius: 35%;
+	display: inline-block;
+	padding: 1em;
+}
+
+.old-tv {
+	height: auto;
+	width: 50%;
 }
