--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DeciderApp</title>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <link href="http://fonts.googleapis.com/css?family=Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
+	<title>DeciderApp</title>
+	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= csrf_meta_tags %>
+	<link href="http://fonts.googleapis.com/css?family=Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
 </head>
-<body
-<div class="container">
-<%= link_to "Home", root_path %>    
-<%= link_to "Search",  search_path %>
-<%= link_to "About", root_path %>
+<body>
+	<div class="container">
+		<nav class="site-navigation">
+			<%= link_to "Home", root_path %>    
+			<%= link_to "Search",  search_path %>
+			<%= link_to "About", root_path %>
+			<% if current_user %>
+			<%= link_to "Log-Out", log_out_path, method: :delete %>
+			<% else %>
+			<%= link_to "Log-In", log_in_path %>
+			<%= link_to "Sign-Up", new_user_path %>
+			<% end %>
+		</nav>
 
-
-<%= yield %>
-</div>
+		<%= yield %>
+	</div>
 
 
 </body>
