--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
 	<title>DeciderApp</title>
 	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= yield :stylesheet %>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
 	<link href="http://fonts.googleapis.com/css?family=Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
@@ -12,7 +13,7 @@
 		<nav class="site-navigation">
 			<%= link_to "Home", root_path %>    
 			<%= link_to "Search",  search_path %>
-			<%= link_to "About", root_path %>
+			<%= link_to "About", help_path %>
 			<% if current_user %>
 			<%= link_to "Log-Out", log_out_path, method: :delete %>
 			<% else %>
@@ -20,6 +21,12 @@
 			<%= link_to "Sign-Up", new_user_path %>
 			<% end %>
 		</nav>
+
+		<header class="site-header">
+			<h1>Decider</h1>
+
+			<h2>Find what you really want to watch here.</h2>
+		</header>
 
 		<%= yield %>
 	</div>
