--- a/app/views/shows/search.html.erb
+++ b/app/views/shows/search.html.erb
@@ -1,17 +1,17 @@
-<h1>Decider</h1>
-
-<h2>Find what you really want to watch here.</h2>
-
-<%= form_tag("/search", method: "post") do %>
-<p>
-  <%= label_tag(:genre, "Search by genre:") %>
-  <select name="genre">
-  	<% Show.available_genres.each do |genre| %>
-  		<option value="<%= genre %>"><%= genre %></option>
-  	<% end %>
-  </select>
-</p>
-<p>
-  <%= submit_tag("Search") %>
-</p>
+<% if @current_user %>
+	<%= form_tag("/search", method: "post") do %>
+	<p>
+	  <%= label_tag(:genre, "Search by genre:") %>
+	  <select name="genre">
+	  	<% Show.available_genres.each do |genre| %>
+	  		<option value="<%= genre %>"><%= genre %></option>
+	  	<% end %>
+	  </select>
+	</p>
+	<p>
+	  <%= submit_tag("Search") %>
+	</p>
+	<% end %>
+<% else %>
+	Sorry, you must be signed in to search.
 <% end %>
