--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,1 +1,7 @@
 <h3>About Decider</h3>
+
+<p>Decider is a web-based application that allows you to search by genre to find programs worth watching on TV right now. Data is provided via the Tribune Media Services API. This app was built as a first project by Heidi Williams-Foy for the Web Development Immersive, General Assembly New York, class of spring/summer 2014. 
+
+Relevant documentation, code, etc. can be found on <a href="https://github.com/HeidiW/decider">Github</a>.
+
+</p>
