remove some styles

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,6 +1,6 @@
 body {
-  font: 100% $font-stack;
-  color: $primary-color;
+  font: 100% /*$font-stack;*/
+/*  color: $primary-color;*/
   padding: 1rem;
 }
 
