--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,10 @@
 <h1> Sign Up<h1>
-<h2>Decider: This app does one thing moderately well.</h2>
+<h2></h2>
 <%= form_for @user do |f| %>
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name %>
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name %>
   <%= f.label :email %>
   <%= f.text_field :email %>
   <%= f.label :password %>
