time date search added

--- a/app/views/shows/search.html.erb
+++ b/app/views/shows/search.html.erb
@@ -6,6 +6,8 @@
         <option value="<%= genre %>"><%= genre %></option>
       <% end %>
     </select>
+    <input type="datetime-local" name="start_date_time">
+    <input type="datetime-local" name="end_date_time">
   </p>
   <p>
     <%= submit_tag("Search") %>
